working for rock paper scissors

--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ position: relative;
 }
 .playTable {
     width: 60%;
-    border: 1px solid black;
 }
 .rock{
     font-size: 100px;
@@ -33,7 +32,7 @@ position: relative;
      height: 100px;
 }
 .rock:hover{
-    transform: scale(1.2);
+    transform: scale(1.4);
     border: 2px solid black;
 }
 .rockResult{
@@ -53,7 +52,7 @@ position: relative;
      height: 100px;
 }
 .paper:hover{
-    transform: scale(1.2);
+    transform: scale(1.4);
     border: 2px solid black;
 }
 .paperResult{
@@ -73,7 +72,7 @@ position: relative;
      height: 100px;
 }
 .scissors:hover{
-    transform: scale(1.2);
+    transform: scale(1.4);
     border: 2px solid black;
 }
 .scissorsResult{
@@ -166,20 +165,118 @@ font-size: 20px;
     margin-top: 10px;
     font-family: 'Permanent Marker', cursive;
 }
+.nextRound{
+    width: 40%;
+    margin: 50px 0 0 210px;
+    color: red;
+    font-family: 'Permanent Marker', cursive;
+    font-size: 20px;
+    border: 2px solid white;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: row;
+}
+.nextRound > div {
+    width: 100%;
+    text-align: center;
+}
+.nextRound:hover{
+    transform: scale(1.2);
+    color: white;
+}
 .winTable {
     width: 40%;
-    border: 1px solid red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.newGame {
+.table{
+    width: 60%;
+    height: 90%;
+    border: 2px solid black;
+    border-radius: 5px;
+    font-family: 'Permanent Marker', cursive;
+    position: relative;
+}
+.scoreTable{
+    text-align: center;
+    font-size: 40px;
+    border-bottom: 2px solid black;
+}
+.players{
+    display: flex;
+    flex-direction: row;
+    height: 78%;
+}
+.playerScore{
+    font-size: 20px;
+    width: 50%;
+    text-align: center;
+    border-right: 2px solid black;
+    border-bottom: 2px solid black;
+}
+.playerScoreList{
+margin:0;
+padding: 0;
+list-style: none;
+text-align: center;
+}
+.playerScoreList > li {
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+}
+.cpuScoreList{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-align: center;
+}
+.cpuScoreList > li {
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+}
+.totalScore{
+    position: absolute;
+    bottom: 5px;
+    left: -150px;
+    display: flex;
+    flex-direction: row;
+    font-size: 20px;
+}
+.playerAllScore{
+font-size: 20px;
+margin-left: 100px;
+}
+.cpuAllScore{
+    font-size: 20px;
+margin-left: 200px;
+color: red;
+}
+.cpuScore{
+    font-size: 20px;
+    color: red;
+    width: 50%;
+    text-align: center;
+    border-bottom: 2px solid black;
+}
+footer{
     display: flex;
     justify-content: center;
     align-items: center;
-}
-footer{
+    margin-top: 40px;
+    width: 100%;
+    background-color: black;
+    color: white;
     height: 100px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end ;
-    margin-right: 10px;
+}
+footer > div > a > i{
+    font-size: 30px;
+    margin: 5px;
+}
+footer > div > a > i:link{
+    color:white;
+}
+footer > div > a:visited{
+    color:white;
 }
 
